Wed Feb 25 18:12:11 2015  Eric Wong  <e@80x24.org>

	* signal.c (sighandler): preserve errno
	  Patch by Steven Stewart-Gallus <sstewartgallus00@mylangara.bc.ca>
	  [ruby-core:68172] [Bug #10866]

Wed Feb 25 15:59:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (push_pattern, push_glob): make globbed file names same
	  encoding to the given pattern.

Wed Feb 25 15:27:16 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/merger.rb: support 2.1+ versioning scheme.

Tue Feb 25 08:49:12 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* lib/cmath.rb (log): raise ArgumentError when more than 2 arguments
	  are passed. [ruby-core:66143] [Bug #10487]

Tue Feb 25 02:15:17 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* test/ruby/test_math.rb: Use assert_infinity instead of assert_equal(1.0/0, ...).

	* test/ruby/test_math.rb: Add tests for overriding Integer#to_f.
	  [ruby-core:67919] [Misc #10809]

Tue Feb 24 22:58:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (nucomp_mul): calculate as rotation in complex plane
	  if matrix calculation resulted in NaN.

Tue Feb 24 21:45:39 2015  Kazuki Tanaka  <mail@tanakakazuki.com>

	* test/ruby/test_math.rb(test_cbrt): Add an assertion for Math.cbrt(1.0/0)
	  and move #test_cbrt to more proper place.

Tue Feb 24 19:09:25 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (lep_svar_place, lep_svar_get): do not create
	  additional T_NODE object (svars holder) when only getting
	  svars.

Tue Feb 24 11:49:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_zone_name): should be US-ASCII only if all 7-bits,
	  otherwise locale encoding.  [ruby-core:68230] [Bug #10887]

Tue Feb 24 09:47:07 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (chompped_length): enable smart chomp for all non-dummy
	  encoding strings, not only default_rs.
	  [ruby-core:68258] [Bug #10893]

Mon Feb 23 23:19:42 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
